# ai_vision_for_all

./: .env.example  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md
examples/: basic_usage.md
outputs/: mac_gui_results.json  mac_wifi.pass1.json  mac_wifi.pass2.json  ubuntu_gui_results.json  ubuntu_launch.pass1.json  ubuntu_launch.pass2.json  ubuntu_launch.pass3.json  ubuntu_launch.pass4.json  ubuntu_launch.pass5.json  win11_gui_results.json  win11_vid.json  win11_vid.pass1.json
src/ai_vision_for_all/: __init__.py  cli.py
tests/: test_geometry.py
